--- a/web-components/package.json
+++ b/web-components/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@ionic/core": "^5.0.7",
+    "@openfonts/nunito_latin-ext": "^1.44.1",
     "@stencil/core": "^1.12.3",
     "gsap": "^3.2.6"
   },
@@ -14,12 +15,16 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@stencil/webpack": "^0.0.6",
-    "autoprefixer": "^9.7.5",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.4",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
