--- a/web-components/stencil/package.json
+++ b/web-components/stencil/package.json
@@ -22,7 +22,7 @@
     "generate": "stencil generate"
   },
   "devDependencies": {
-    "@stencil/core": "^1.12.2",
+    "@stencil/core": "1.0.7",
     "@stencil/postcss": "^1.0.1",
     "@stencil/sass": "^1.3.1",
     "@types/autoprefixer": "^9.7.2",
